# home-dns

./: README.md  compose.yml
config/: hosts
coredns/config/: Corefile
fastapi/: compose.yml
fastapi/app/: pyproject.toml
fastapi/app/routers/: etcd_router.py
