[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "0.115.0"
uvicorn = "0.30.6"
pydantic-settings = "2.5.2"
etcd3 = "0.12.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.6.8"
mypy = "1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
